--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="Screenshot 2023-07-27 223604.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Job Description using AI.Improve Job Descriptions, Create Job Intros, and Generate Hiring Posts Effortlessly | Elevate Your HR Experience Today" />
+    content="Generate Free compelling job descriptions that attract top talent in seconds with Attract HR's GPT 3.5 AI-powered Job Description Generator. Our tool helps you create enticing job descriptions, job introduction and linkedin hiring posts effortlessly." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Attract HR: Free AI Job Description Generator | Free and Engaging Job Descriptions | Free AI Job Introduction Generater | Free Hiring Post Generator</title>
 </head>
 
 <body>
@@ -45,6 +45,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div id="root"></div>
 </body>
 
 </html>
